# slm_multimodal

./: pyproject.toml  try_module.py
slm_multmodal/: control.py  process.py
slm_multmodal/src/: config.yaml
