[tool.poetry]
name = "slm-multmodal"
version = "0.1.0"
description = ""
authors = ["antenoraires <antenoraires37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = ">=4.42.0,<4.43.0"
pillow = "*"
langchain-community = "*"
langchain-huggingface = "*"
langchain-milvus = "*"
langchain-ollama = "*"
docling = "^2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
